update ModelImpl and Makefile

--- a/MyVensim/docs/latex/classModel.tex
+++ b/MyVensim/docs/latex/classModel.tex
@@ -11,7 +11,8 @@ Abstract base class representing a model with systems, flows, and sub-\/models.
 
 
 
-Inheritance diagram for Model\+:\nopagebreak
+Inheritance diagram for Model\+:
+\nopagebreak
 \begin{figure}[H]
 \begin{center}
 \leavevmode
@@ -326,8 +327,7 @@ Here is the call graph for this function\+:\nopagebreak
 \includegraphics[width=350pt]{classModel_a51a6961eef61a054605c3b781410d753_cgraph}
 \end{center}
 \end{figure}
-Here is the caller graph for this function\+:
-\nopagebreak
+Here is the caller graph for this function\+:\nopagebreak
 \begin{figure}[H]
 \begin{center}
 \leavevmode
