--- a/MyVensim/docs/latex/mainUTest_8cpp.tex
+++ b/MyVensim/docs/latex/mainUTest_8cpp.tex
@@ -1,8 +1,7 @@
 \doxysection{test/unit/main\+UTest.cpp File Reference}
 \hypertarget{mainUTest_8cpp}{}\label{mainUTest_8cpp}\index{test/unit/mainUTest.cpp@{test/unit/mainUTest.cpp}}
 {\ttfamily \#include "{}unit\+\_\+test.\+hpp"{}}\newline
-Include dependency graph for main\+UTest.\+cpp\+:
-\nopagebreak
+Include dependency graph for main\+UTest.\+cpp\+:\nopagebreak
 \begin{figure}[H]
 \begin{center}
 \leavevmode
@@ -47,8 +46,7 @@ Definition at line \mbox{\hyperlink{mainUTest_8cpp_source_l00003}{3}} of file \m
 \DoxyCodeLine{00018\ \}}
 
 \end{DoxyCode}
-Here is the call graph for this function\+:
-\nopagebreak
+Here is the call graph for this function\+:\nopagebreak
 \begin{figure}[H]
 \begin{center}
 \leavevmode
