--- a/MyVensim/docs/latex/unit__model_8cpp.tex
+++ b/MyVensim/docs/latex/unit__model_8cpp.tex
@@ -1,8 +1,7 @@
 \doxysection{test/unit/unit\+\_\+model.cpp File Reference}
 \hypertarget{unit__model_8cpp}{}\label{unit__model_8cpp}\index{test/unit/unit\_model.cpp@{test/unit/unit\_model.cpp}}
 {\ttfamily \#include "{}unit\+\_\+model.\+hpp"{}}\newline
-Include dependency graph for unit\+\_\+model.\+cpp\+:
-\nopagebreak
+Include dependency graph for unit\+\_\+model.\+cpp\+:\nopagebreak
 \begin{figure}[H]
 \begin{center}
 \leavevmode
@@ -73,8 +72,7 @@ Definition at line \mbox{\hyperlink{unit__model_8cpp_source_l00025}{25}} of file
 \DoxyCodeLine{00031\ \}}
 
 \end{DoxyCode}
-Here is the call graph for this function\+:
-\nopagebreak
+Here is the call graph for this function\+:\nopagebreak
 \begin{figure}[H]
 \begin{center}
 \leavevmode
@@ -113,8 +111,7 @@ Definition at line \mbox{\hyperlink{unit__model_8cpp_source_l00017}{17}} of file
 \DoxyCodeLine{00023\ \}}
 
 \end{DoxyCode}
-Here is the call graph for this function\+:
-\nopagebreak
+Here is the call graph for this function\+:\nopagebreak
 \begin{figure}[H]
 \begin{center}
 \leavevmode
@@ -155,8 +152,7 @@ Definition at line \mbox{\hyperlink{unit__model_8cpp_source_l00062}{62}} of file
 \DoxyCodeLine{00070\ \}}
 
 \end{DoxyCode}
-Here is the call graph for this function\+:
-\nopagebreak
+Here is the call graph for this function\+:\nopagebreak
 \begin{figure}[H]
 \begin{center}
 \leavevmode
@@ -197,8 +193,7 @@ Definition at line \mbox{\hyperlink{unit__model_8cpp_source_l00072}{72}} of file
 \DoxyCodeLine{00080\ \}}
 
 \end{DoxyCode}
-Here is the call graph for this function\+:
-\nopagebreak
+Here is the call graph for this function\+:\nopagebreak
 \begin{figure}[H]
 \begin{center}
 \leavevmode
@@ -239,8 +234,7 @@ Definition at line \mbox{\hyperlink{unit__model_8cpp_source_l00052}{52}} of file
 \DoxyCodeLine{00060\ \}}
 
 \end{DoxyCode}
-Here is the call graph for this function\+:
-\nopagebreak
+Here is the call graph for this function\+:\nopagebreak
 \begin{figure}[H]
 \begin{center}
 \leavevmode
@@ -320,8 +314,7 @@ Definition at line \mbox{\hyperlink{unit__model_8cpp_source_l00125}{125}} of fil
 \DoxyCodeLine{00146\ \}}
 
 \end{DoxyCode}
-Here is the call graph for this function\+:
-\nopagebreak
+Here is the call graph for this function\+:\nopagebreak
 \begin{figure}[H]
 \begin{center}
 \leavevmode
@@ -360,8 +353,7 @@ Definition at line \mbox{\hyperlink{unit__model_8cpp_source_l00044}{44}} of file
 \DoxyCodeLine{00050\ \}}
 
 \end{DoxyCode}
-Here is the call graph for this function\+:
-\nopagebreak
+Here is the call graph for this function\+:\nopagebreak
 \begin{figure}[H]
 \begin{center}
 \leavevmode
@@ -417,8 +409,7 @@ Definition at line \mbox{\hyperlink{unit__model_8cpp_source_l00148}{148}} of fil
 \DoxyCodeLine{00171\ \}}
 
 \end{DoxyCode}
-Here is the call graph for this function\+:
-\nopagebreak
+Here is the call graph for this function\+:\nopagebreak
 \begin{figure}[H]
 \begin{center}
 \leavevmode
@@ -459,8 +450,7 @@ Definition at line \mbox{\hyperlink{unit__model_8cpp_source_l00092}{92}} of file
 \DoxyCodeLine{00100\ \}}
 
 \end{DoxyCode}
-Here is the call graph for this function\+:
-\nopagebreak
+Here is the call graph for this function\+:\nopagebreak
 \begin{figure}[H]
 \begin{center}
 \leavevmode
@@ -501,8 +491,7 @@ Definition at line \mbox{\hyperlink{unit__model_8cpp_source_l00082}{82}} of file
 \DoxyCodeLine{00090\ \}}
 
 \end{DoxyCode}
-Here is the call graph for this function\+:
-\nopagebreak
+Here is the call graph for this function\+:\nopagebreak
 \begin{figure}[H]
 \begin{center}
 \leavevmode
@@ -545,8 +534,7 @@ Definition at line \mbox{\hyperlink{unit__model_8cpp_source_l00173}{173}} of fil
 \DoxyCodeLine{00183\ \}}
 
 \end{DoxyCode}
-Here is the call graph for this function\+:
-\nopagebreak
+Here is the call graph for this function\+:\nopagebreak
 \begin{figure}[H]
 \begin{center}
 \leavevmode
@@ -586,8 +574,7 @@ Definition at line \mbox{\hyperlink{unit__model_8cpp_source_l00035}{35}} of file
 \DoxyCodeLine{00042\ \}}
 
 \end{DoxyCode}
-Here is the call graph for this function\+:
-\nopagebreak
+Here is the call graph for this function\+:\nopagebreak
 \begin{figure}[H]
 \begin{center}
 \leavevmode
@@ -641,8 +628,7 @@ Definition at line \mbox{\hyperlink{unit__model_8cpp_source_l00102}{102}} of fil
 \DoxyCodeLine{00123\ \}}
 
 \end{DoxyCode}
-Here is the call graph for this function\+:
-\nopagebreak
+Here is the call graph for this function\+:\nopagebreak
 \begin{figure}[H]
 \begin{center}
 \leavevmode
