--- a/MyVensim/docs/latex/unit__test_8hpp.tex
+++ b/MyVensim/docs/latex/unit__test_8hpp.tex
@@ -3,8 +3,7 @@
 {\ttfamily \#include "{}unit\+\_\+system.\+hpp"{}}\newline
 {\ttfamily \#include "{}unit\+\_\+flow.\+hpp"{}}\newline
 {\ttfamily \#include "{}unit\+\_\+model.\+hpp"{}}\newline
-Include dependency graph for unit\+\_\+test.\+hpp\+:
-\nopagebreak
+Include dependency graph for unit\+\_\+test.\+hpp\+:\nopagebreak
 \begin{figure}[H]
 \begin{center}
 \leavevmode
@@ -129,8 +128,7 @@ Definition at line \mbox{\hyperlink{unit__test_8cpp_source_l00043}{43}} of file 
 \DoxyCodeLine{00072\ \}}
 
 \end{DoxyCode}
-Here is the call graph for this function\+:
-\nopagebreak
+Here is the call graph for this function\+:\nopagebreak
 \begin{figure}[H]
 \begin{center}
 \leavevmode
