--- a/MyVensim/docs/latex/functional__tests_8cpp.tex
+++ b/MyVensim/docs/latex/functional__tests_8cpp.tex
@@ -1,8 +1,7 @@
 \doxysection{test/funcional/functional\+\_\+tests.cpp File Reference}
 \hypertarget{functional__tests_8cpp}{}\label{functional__tests_8cpp}\index{test/funcional/functional\_tests.cpp@{test/funcional/functional\_tests.cpp}}
 {\ttfamily \#include "{}functional\+\_\+tests.\+hpp"{}}\newline
-Include dependency graph for functional\+\_\+tests.\+cpp\+:
-\nopagebreak
+Include dependency graph for functional\+\_\+tests.\+cpp\+:\nopagebreak
 \begin{figure}[H]
 \begin{center}
 \leavevmode
@@ -79,8 +78,7 @@ Definition at line \mbox{\hyperlink{functional__tests_8cpp_source_l00089}{89}} o
 \DoxyCodeLine{00119\ \}}
 
 \end{DoxyCode}
-Here is the call graph for this function\+:
-\nopagebreak
+Here is the call graph for this function\+:\nopagebreak
 \begin{figure}[H]
 \begin{center}
 \leavevmode
@@ -133,8 +131,7 @@ Definition at line \mbox{\hyperlink{functional__tests_8cpp_source_l00067}{67}} o
 \DoxyCodeLine{00087\ \}}
 
 \end{DoxyCode}
-Here is the call graph for this function\+:
-\nopagebreak
+Here is the call graph for this function\+:\nopagebreak
 \begin{figure}[H]
 \begin{center}
 \leavevmode
@@ -188,8 +185,7 @@ Definition at line \mbox{\hyperlink{functional__tests_8cpp_source_l00044}{44}} o
 \DoxyCodeLine{00065\ \}}
 
 \end{DoxyCode}
-Here is the call graph for this function\+:
-\nopagebreak
+Here is the call graph for this function\+:\nopagebreak
 \begin{figure}[H]
 \begin{center}
 \leavevmode
