--- a/MyVensim/docs/latex/functional__tests_8hpp.tex
+++ b/MyVensim/docs/latex/functional__tests_8hpp.tex
@@ -4,8 +4,7 @@
 {\ttfamily \#include $<$cmath$>$}\newline
 {\ttfamily \#include "{}../../src/\+Flow\+Impl.\+hpp"{}}\newline
 {\ttfamily \#include "{}../../src/\+Model.\+hpp"{}}\newline
-Include dependency graph for functional\+\_\+tests.\+hpp\+:
-\nopagebreak
+Include dependency graph for functional\+\_\+tests.\+hpp\+:\nopagebreak
 \begin{figure}[H]
 \begin{center}
 \leavevmode
@@ -80,8 +79,7 @@ Definition at line \mbox{\hyperlink{functional__tests_8cpp_source_l00089}{89}} o
 \DoxyCodeLine{00119\ \}}
 
 \end{DoxyCode}
-Here is the call graph for this function\+:
-\nopagebreak
+Here is the call graph for this function\+:\nopagebreak
 \begin{figure}[H]
 \begin{center}
 \leavevmode
@@ -134,8 +132,7 @@ Definition at line \mbox{\hyperlink{functional__tests_8cpp_source_l00067}{67}} o
 \DoxyCodeLine{00087\ \}}
 
 \end{DoxyCode}
-Here is the call graph for this function\+:
-\nopagebreak
+Here is the call graph for this function\+:\nopagebreak
 \begin{figure}[H]
 \begin{center}
 \leavevmode
@@ -189,8 +186,7 @@ Definition at line \mbox{\hyperlink{functional__tests_8cpp_source_l00044}{44}} o
 \DoxyCodeLine{00065\ \}}
 
 \end{DoxyCode}
-Here is the call graph for this function\+:
-\nopagebreak
+Here is the call graph for this function\+:\nopagebreak
 \begin{figure}[H]
 \begin{center}
 \leavevmode
