--- a/MyVensim/docs/latex/unit__model_8hpp.tex
+++ b/MyVensim/docs/latex/unit__model_8hpp.tex
@@ -3,8 +3,7 @@
 {\ttfamily \#include "{}../../src/\+Model.\+hpp"{}}\newline
 {\ttfamily \#include "{}../../src/\+Flow\+Impl.\+hpp"{}}\newline
 {\ttfamily \#include $<$assert.\+h$>$}\newline
-Include dependency graph for unit\+\_\+model.\+hpp\+:
-\nopagebreak
+Include dependency graph for unit\+\_\+model.\+hpp\+:\nopagebreak
 \begin{figure}[H]
 \begin{center}
 \leavevmode
@@ -77,8 +76,7 @@ Definition at line \mbox{\hyperlink{unit__model_8cpp_source_l00025}{25}} of file
 \DoxyCodeLine{00031\ \}}
 
 \end{DoxyCode}
-Here is the call graph for this function\+:
-\nopagebreak
+Here is the call graph for this function\+:\nopagebreak
 \begin{figure}[H]
 \begin{center}
 \leavevmode
@@ -117,8 +115,7 @@ Definition at line \mbox{\hyperlink{unit__model_8cpp_source_l00017}{17}} of file
 \DoxyCodeLine{00023\ \}}
 
 \end{DoxyCode}
-Here is the call graph for this function\+:
-\nopagebreak
+Here is the call graph for this function\+:\nopagebreak
 \begin{figure}[H]
 \begin{center}
 \leavevmode
@@ -159,8 +156,7 @@ Definition at line \mbox{\hyperlink{unit__model_8cpp_source_l00062}{62}} of file
 \DoxyCodeLine{00070\ \}}
 
 \end{DoxyCode}
-Here is the call graph for this function\+:
-\nopagebreak
+Here is the call graph for this function\+:\nopagebreak
 \begin{figure}[H]
 \begin{center}
 \leavevmode
@@ -201,8 +197,7 @@ Definition at line \mbox{\hyperlink{unit__model_8cpp_source_l00072}{72}} of file
 \DoxyCodeLine{00080\ \}}
 
 \end{DoxyCode}
-Here is the call graph for this function\+:
-\nopagebreak
+Here is the call graph for this function\+:\nopagebreak
 \begin{figure}[H]
 \begin{center}
 \leavevmode
@@ -243,8 +238,7 @@ Definition at line \mbox{\hyperlink{unit__model_8cpp_source_l00052}{52}} of file
 \DoxyCodeLine{00060\ \}}
 
 \end{DoxyCode}
-Here is the call graph for this function\+:
-\nopagebreak
+Here is the call graph for this function\+:\nopagebreak
 \begin{figure}[H]
 \begin{center}
 \leavevmode
@@ -324,8 +318,7 @@ Definition at line \mbox{\hyperlink{unit__model_8cpp_source_l00125}{125}} of fil
 \DoxyCodeLine{00146\ \}}
 
 \end{DoxyCode}
-Here is the call graph for this function\+:
-\nopagebreak
+Here is the call graph for this function\+:\nopagebreak
 \begin{figure}[H]
 \begin{center}
 \leavevmode
@@ -364,8 +357,7 @@ Definition at line \mbox{\hyperlink{unit__model_8cpp_source_l00044}{44}} of file
 \DoxyCodeLine{00050\ \}}
 
 \end{DoxyCode}
-Here is the call graph for this function\+:
-\nopagebreak
+Here is the call graph for this function\+:\nopagebreak
 \begin{figure}[H]
 \begin{center}
 \leavevmode
@@ -421,8 +413,7 @@ Definition at line \mbox{\hyperlink{unit__model_8cpp_source_l00148}{148}} of fil
 \DoxyCodeLine{00171\ \}}
 
 \end{DoxyCode}
-Here is the call graph for this function\+:
-\nopagebreak
+Here is the call graph for this function\+:\nopagebreak
 \begin{figure}[H]
 \begin{center}
 \leavevmode
@@ -463,8 +454,7 @@ Definition at line \mbox{\hyperlink{unit__model_8cpp_source_l00092}{92}} of file
 \DoxyCodeLine{00100\ \}}
 
 \end{DoxyCode}
-Here is the call graph for this function\+:
-\nopagebreak
+Here is the call graph for this function\+:\nopagebreak
 \begin{figure}[H]
 \begin{center}
 \leavevmode
@@ -505,8 +495,7 @@ Definition at line \mbox{\hyperlink{unit__model_8cpp_source_l00082}{82}} of file
 \DoxyCodeLine{00090\ \}}
 
 \end{DoxyCode}
-Here is the call graph for this function\+:
-\nopagebreak
+Here is the call graph for this function\+:\nopagebreak
 \begin{figure}[H]
 \begin{center}
 \leavevmode
@@ -549,8 +538,7 @@ Definition at line \mbox{\hyperlink{unit__model_8cpp_source_l00173}{173}} of fil
 \DoxyCodeLine{00183\ \}}
 
 \end{DoxyCode}
-Here is the call graph for this function\+:
-\nopagebreak
+Here is the call graph for this function\+:\nopagebreak
 \begin{figure}[H]
 \begin{center}
 \leavevmode
@@ -590,8 +578,7 @@ Definition at line \mbox{\hyperlink{unit__model_8cpp_source_l00035}{35}} of file
 \DoxyCodeLine{00042\ \}}
 
 \end{DoxyCode}
-Here is the call graph for this function\+:
-\nopagebreak
+Here is the call graph for this function\+:\nopagebreak
 \begin{figure}[H]
 \begin{center}
 \leavevmode
@@ -645,8 +632,7 @@ Definition at line \mbox{\hyperlink{unit__model_8cpp_source_l00102}{102}} of fil
 \DoxyCodeLine{00123\ \}}
 
 \end{DoxyCode}
-Here is the call graph for this function\+:
-\nopagebreak
+Here is the call graph for this function\+:\nopagebreak
 \begin{figure}[H]
 \begin{center}
 \leavevmode
