--- a/MyVensim/docs/latex/unit__test_8cpp.tex
+++ b/MyVensim/docs/latex/unit__test_8cpp.tex
@@ -1,8 +1,7 @@
 \doxysection{test/unit/unit\+\_\+test.cpp File Reference}
 \hypertarget{unit__test_8cpp}{}\label{unit__test_8cpp}\index{test/unit/unit\_test.cpp@{test/unit/unit\_test.cpp}}
 {\ttfamily \#include "{}unit\+\_\+test.\+hpp"{}}\newline
-Include dependency graph for unit\+\_\+test.\+cpp\+:
-\nopagebreak
+Include dependency graph for unit\+\_\+test.\+cpp\+:\nopagebreak
 \begin{figure}[H]
 \begin{center}
 \leavevmode
@@ -120,8 +119,7 @@ Definition at line \mbox{\hyperlink{unit__test_8cpp_source_l00043}{43}} of file 
 \DoxyCodeLine{00072\ \}}
 
 \end{DoxyCode}
-Here is the call graph for this function\+:
-\nopagebreak
+Here is the call graph for this function\+:\nopagebreak
 \begin{figure}[H]
 \begin{center}
 \leavevmode
